# torch_diffusion_augmentation

./: .env.example  .gitignore  Makefile  README.md  justfile  pyproject.toml
configs/: download_datasets.yaml  generate_synthetic_images.yaml  lora_finetune.yaml  model_selection.yaml  prepare_resnet_data.yaml  prepare_sana_datasets.yaml  resnet_eval.yaml  resnet_train.yaml
scripts/: download_datasets.py  evaluate_resnet.py  generate_synthetic_images.py  prepare_all_resnet_data.py  prepare_resnet_data.py  prepare_sana_datasets.py  sana_lora_finetune.py  select_model.py  train_resnet.py
src/pnw/: __init__.py  common.py  data_prep.py  datasets.py  resnet.py  synthetic.py
src/pnw/lora_finetune/: __init__.py  finetune.py
src/pnw/model_selection/: __init__.py  selection.py
src/pnw/resnet_training/: __init__.py  eval.py  train.py
stage_1/: select_model.py
stage_2/: sana_lora_finetune.py
stage_3/: evaluate_resnet.py  train_resnet.py
