[project]
name = "pnw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "diffusers",
    "hydra-core>=1.3.0",
    "peft>=0.19.1",
    "torch>=2.5.1",
    "torch-fidelity>=0.4.0",
    "torchmetrics>=1.6.0",
    "torchvision>=0.20.0",
    "transformers>=4.40.0",
    "wandb>=0.26.0",
]
[tool.uv.sources]
diffusers = { path = "./diffusers", editable = true }
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[[tool.uv.indexes]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
