[project]
name = "pnw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "diffusers",
    "hydra-core>=1.3.0",
    "huggingface-hub>=1.11.0",
    "peft>=0.19.1",
    "pillow>=12.2.0",
    "scikit-learn>=1.4.0",
    "torch>=2.5.1",
    "torch-fidelity>=0.4.0",
    "torchmetrics>=1.6.0",
    "torchvision>=0.20.0",
    "transformers>=4.40.0",
    "wandb>=0.26.0",
    "datasets>=4.8.5",
    "bitsandbytes>=0.49.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]


[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
